# First_Lab

./: .gitignore  CMakeLists.txt  List.cpp  List.h  README.md  Test.cpp  Time.cpp  Time.h  main.cpp  time.cpp
1.0/Lists/sources/: Array.cpp  List.cpp  Vector.cpp
2.0/: CMakeLists.txt  main.cpp
2.0/Forms/: addelement.cpp  addelement.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  setdateandtime.cpp  setdateandtime.h  setdateandtime.ui  settime.cpp  settime.h  settime.ui
2.0/Lists/headers/: Array.h  Interface.h  List.h  Vector.h
2.0/Lists/sources/: Array.cpp  List.cpp  Vector.cpp
2.0/Tests/: GoogleTest.cpp  Test.cpp  Tests.cpp
2.0/Time_and_Date/headers/: Date.h  Date_and_Time.h
2.0/Time_and_Date/sources/: Date.cpp  Date_and_Time.cpp  Times.cpp
Lists/headers/: Array.h  Interface.h  List.h  Vector.h
Lists/sources/: Array.cpp  List.cpp  Vector.cpp
Tests/: Test.cpp
Time_and_Date/headers/: Date.h  Times.h
Time_and_Date/sources/: Date.cpp  Times.cpp
UML/: Diagrams.vpp
